--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,11 @@ stages:
     jobs:
       - job: TerraformInit
         steps:
+          - task: TerraformInstaller@0
+            displayName: 'Install Terraform CLI'
+            inputs:
+              terraformVersion: '1.6.6'
+
           - task: TerraformTaskV4@4
             displayName: 'Terraform Init'
             inputs:
@@ -33,6 +38,11 @@ stages:
     jobs:
       - job: TerraformValidate
         steps:
+          - task: TerraformInstaller@0
+            displayName: 'Install Terraform CLI'
+            inputs:
+              terraformVersion: '1.6.6'
+
           - task: TerraformTaskV4@4
             displayName: 'Terraform Validate'
             inputs:
@@ -46,6 +56,11 @@ stages:
     jobs:
       - job: TerraformPlan
         steps:
+          - task: TerraformInstaller@0
+            displayName: 'Install Terraform CLI'
+            inputs:
+              terraformVersion: '1.6.6'
+
           - task: TerraformTaskV4@4
             displayName: 'Terraform Plan'
             inputs:
@@ -59,6 +74,11 @@ stages:
     jobs:
       - job: TerraformApply
         steps:
+          - task: TerraformInstaller@0
+            displayName: 'Install Terraform CLI'
+            inputs:
+              terraformVersion: '1.6.6'
+
           - task: TerraformTaskV4@4
             displayName: 'Terraform Apply'
             inputs:
