--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ stages:
             inputs:
               provider: 'azurerm'
               command: 'plan'
-              backendServiceArm: '$(backendService)'
+              environmentServiceNameAzureRM: '$(backendService)'
               workingDirectory: '$(workingDir)'
 
   - stage: Apply
@@ -84,6 +84,7 @@ stages:
             inputs:
               provider: 'azurerm'
               command: 'apply'
-              backendServiceArm: '$(backendService)'
+              environmentServiceNameAzureRM: '$(backendService)'
               workingDirectory: '$(workingDir)'
               allowTelemetryCollection: false
+
