--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,14 @@ stages:
     jobs:
       - job: TerraformInit
         steps:
+         steps:
+        - checkout: self
+
+        - script: |
+            echo "Working dir: $(workingDir)"
+            ls -al $(workingDir)
+          displayName: 'List files in working directory'
+          
           - task: TerraformInstaller@0
             displayName: 'Install Terraform CLI'
             inputs:
@@ -51,23 +59,25 @@ stages:
               backendServiceArm: '$(backendService)'
               workingDirectory: '$(workingDir)'
 
-  - stage: Plan
-    dependsOn: Validate
-    jobs:
-      - job: TerraformPlan
-        steps:
-          - task: TerraformInstaller@0
-            displayName: 'Install Terraform CLI'
-            inputs:
-              terraformVersion: '1.6.6'
+- stage: Plan
+  dependsOn: Validate
+  jobs:
+    - job: TerraformPlan
+      steps:
+        - checkout: self
 
-          - task: TerraformTaskV4@4
-            displayName: 'Terraform Plan'
-            inputs:
-              provider: 'azurerm'
-              command: 'plan'
-              environmentServiceNameAzureRM: '$(backendService)'
-              workingDirectory: '$(workingDir)'
+        - task: UseTerraformVersion@0
+          inputs:
+            version: '1.6.6'
+            install: true
+
+        - task: TerraformTaskV4@4
+          inputs:
+            provider: 'azurerm'
+            command: 'plan'
+            environmentServiceNameAzureRM: '$(backendService)'
+            workingDirectory: '$(System.DefaultWorkingDirectory)'
+
 
   - stage: Apply
     dependsOn: Plan
